--- a/index.html
+++ b/index.html
@@ -41,130 +41,68 @@
     <button onclick="showProject3Photos()" style="background-color: orange; color: white;">Project 3</button>
     <button onclick="showProject4Photos()" style="background-color: purple; color: white;">Project 4</button>
 
-
-
     <div id="current-photos" style="display:none;">
-        <h2>Project Prusa Slicer software and the Prusa MINI+ printer</h2>
-        <p>The first print is a 3D print of my name, Daniel Shemesh, as a name tag.</p>
-        <img src="nametag.jpg" alt="Nametag 3D Print" width="300">
-
-        <h2>Second 3D Print: Calibration Test</h2>
-        <p>The second 3D print is designed to push the limits of the machine. I chose to print out a rifleman rfl-8d, which is also known as a computer game character. The issue I saw with this print was that the arms were too long—more than a 45-degree angle.</p>
-        <img src="second.jpg" alt="Calibration Test 3D Print" width="300">
-        <img src="second-print.jpg" alt="Calibration Test 3D Print" width="300">
-        <img src="second-print2.jpg" alt="Calibration Test 3D Print" width="300">
-        <img src="second-print3.jpg" alt="Calibration Test 3D Print" width="300">
-        
-        <h3>Post reflection</h3>
-        <p>Coming to ENGR 11A, I was very excited to learn how to 3D print and design different objects. In the nametag project, I had much fun creating my first-ever 3D print and succeeding on my very first try. On the other hand, the second print was more complicated. I did many tries but still haven’t succeeded in finding a print that will meet the requirements perfectly. In the end, I found an action figure-looking print that became my final project. One of my future goals is to become an entrepreneur, creating products that solve problems and make the world a better place. This class has exceeded my expectations, and I feel like I’m getting closer to my dream.</p>
+        <!-- Content for Project 1 -->
     </div>
 
     <div id="new-photos" style="display:none;">
-        <h2>Project 2: TinkerCAD - Phone Pen Holder</h2>
-        <p>Post reflection Thikercad Project - I used to work with solid works for 3D designing before,so I had to get used to TinkerCad but turns out it is a very simple 3D designing tool. While thinking of a design to combine two designs into one my main personal goal in mind was to make a product that would be useful, functional and that I would love to use. I'm really proud of how my final design turned out. It’s highly functional, allowing for both pen storage and serving as a phone stand. I find my designs to be super functional and efficient as you can store pens and also stand your phone.Beyond its practicality, I also aimed to add an element of fun and creativity, making it more than just a typical, everyday design.</p>
-        <img src="IMG_2031.jpg" alt="New 3D Print 1" width="300">
-        <img src="IMG_2032.jpg" alt="New 3D Print 2" width="300">
-        <img src="IMG_2033.jpg" alt="New 3D Print 1" width="300">
-        <img src="IMG_2035.jpg" alt="New 3D Print 2" width="300">
-        <img src="IMG_2037.jpg" alt="New 3D Print 2" width="300">
-        <img src="pic.png" alt="New 3D Print 2" width="900">
-
-        <h2>Project 3: Fusion 360 - Phone Pen Holder</h2>
-        <p>Post reflection Project Fusion - Working with Fusion was an interesting experience. Fusions seems to have an obvious advantage over Thikercad as there are more functions we can use for our designing. I found it very complicated to use because there were so many functions. My main goal in the second design was to take my first design and make it more professional and simpler so people could use it in the workspace. Another consideration I had is that I wanted a more stable phone holder. When using it I find it very useful whether I am watching a video and reflecting on it or If I am working and using the stand to play music on my phone.</p>
-        <img src="pic2.png" alt="Fusion 360 Print" width="900">
-        <img src="IMG_2052.jpg" alt="Fusion 360 Print" width="300">
-        <img src="IMG_2053.jpg" alt="Fusion 360 Print" width="300">
-        <img src="IMG_2054.jpg" alt="Fusion 360 Print" width="300">
+        <!-- Content for Project 2 -->
     </div>
 
-
     <div id="project3-photos" style="display:none;">
-    <h2>Project 3: Alarm Clock Holder</h2>
-    <p>Post reflection Project 3 - Coming into this project, I was very excited about the idea of building an alarm clock for the first time in my life! I felt that this would be one of the most exciting projects we did so far. Throughout the process, I experienced both challenges and successes, but I am proud to have completed it in the end.
-During this project I worked with my teammate, Charlie.  We were working very efficiently together, and I really enjoyed working with him. We worked well together, and it made the project feel much more manageable.
-The most difficult part was the design phase, particularly using Fusion 360. The software presents a steep learning curve, but I found that overcoming these challenges helped me build my skills further.
-ENGR 11A class keeps surprising me. The work is not easy but the end result is very rewarding and gives me a sense of accomplishment.
-</p>
-  <h2>Soldering an alarm clock </h2>
-          <p>Soldering an alarm clock was a very intresting expirience. As somone doing it for the first time I really find it satisfying to sold. </p>
+        <!-- Content for Project 3 -->
+    </div>
 
-            <img src="IMG_2124.jpg" alt="Fusion 360 3D printed phone pen holder - top view" width="300">
+    <div id="project4-photos" style="display:none;">
+        <h2>Project 4: 3D-Printed e-NABLE Prosthesis</h2>
+        <p>Post reflection - For this project, I 3D-printed a prosthetic hand using the e-NABLE prosthesis model. I scaled the hand to 150% and worked through the assembly process using the provided documentation and resources. Here is the assembly process and my modifications:</p>
 
-                                        <h2>Alarm clock holder </h2>
-<p>Alarm clock holder - This part of the project was a bit tricky since our first print had one false measurment (the side was too short) we had to redue the sketch. At last we got our final prodoct! </p>
-    <img src="IMG_2119.jpg" alt="Fusion 360 3D printed phone pen holder - side view" width="300">
-    <img src="IMG_2120.jpg" alt="Fusion 360 3D printed phone pen holder - front view" width="300">
-    <img src="IMG_2123.jpg" alt="Fusion 360 3D printed phone pen holder - top view" width="300">
-    <img src="IMG_2124.jpg" alt="Fusion 360 3D printed phone pen holder - top view" width="300">
-                                <h2>Alarm clock holder Designing</h2>
-        <p>In This step we we had to take mesurments of all the mesures of the alarm clock and na=batterie case for getting the specific detailes for a perfect design. </p>
+        <h3>Assembly Process</h3>
+        <p>[Insert your explanation of the assembly process]</p>
+        <img src="f1.jpg" alt="Assembly process step 1" width="300">
+        <img src="f2.jpg" alt="Assembly process step 2" width="300">
+        <img src="f3.jpg" alt="Assembly process step 3" width="300">
 
-    <img src="IMG_2144.jpg" alt="Fusion 360 3D printed phone pen holder - top view" width="300">
-    <img src="IMG_2145.jpg" alt="Fusion 360 3D printed phone pen holder - top view" width="300">
-    <img src="IMG_2146.jpg" alt="Fusion 360 3D printed phone pen holder - top view" width="300">
-                <h2>Laser cutting </h2>
-        <p>This faze was very hard we had to figure out how to build our sketch from zero and make it in a dxf format for the laser cutting. one of our biggest challanges was understanding simple principles of working with fusion like mirroing or parrallel figurs. With the help of our Proffesor and TA's we have succeded to create out first laser cutted Alarm Clock Holder!!! </p>
-    <img src="IMG_2140.jpg" alt="Fusion 360 3D printed phone pen holder - top view" width="300">
-    <img src="IMG_2141.jpg" alt="Fusion 360 3D printed phone pen holder - top view" width="300">
-    <img src="IMG_2143.jpg" alt="Fusion 360 3D printed phone pen holder - top view" width="300">
-                        <p> Unfortunately our first laser cut was not succesgull interms of size: It was just too small to fit. </p>
+        <h3>Design Modifications</h3>
+        <p>I also made a design modification to enhance the functionality of the prosthetic hand. Here are the details:</p>
+        <img src="f4.jpg" alt="Design modification 1" width="300">
+        <img src="f5.jpg" alt="Design modification 2" width="300">
+        <img src="f6.jpg" alt="Design modification 3" width="300">
 
-                <h2>Laser cutting Final cut number 2 </h2>
-        <p>Laser cutting 2 - IN This step we decided to take a diffrent approach. Instead of recreating the whole sketch we decided to adjust by 103 % the size of the holder and it succefully worked. </p>
-    <img src="IMG_2152.jpg" alt="Fusion 360 3D printed phone pen holder - top view" width="300">
-    <img src="IMG_2153.jpg" alt="Fusion 360 3D printed phone pen holder - top view" width="300">
-
-<div id="project4-photos" style="display:none;">
-    <h2>Project 4: 3D-Printed e-NABLE Prosthesis</h2>
-    <p>Post reflection - For this project, I 3D-printed a prosthetic hand using the e-NABLE prosthesis model. I scaled the hand to 150% and worked through the assembly process using the provided documentation and resources. Here is the assembly process and my modifications:</p>
-
-    <h3>Assembly Process</h3>
-    <p>[Insert your explanation of the assembly process]</p>
-    <img src="f1.jpg" alt="Assembly process step 1" width="300">
-    <img src="f2.jpg" alt="Assembly process step 2" width="300">
-    <img src="f3.jpg" alt="Assembly process step 3" width="300">
-
-    <h3>Design Modifications</h3>
-    <p>I also made a design modification to enhance the functionality of the prosthetic hand. Here are the details:</p>
-    <img src="f4.jpg" alt="Design modification 1" width="300">
-    <img src="f5.jpg" alt="Design modification 2" width="300">
-    <img src="f6.jpg" alt="Design modification 3" width="300">
-
-    <h3>Reflection</h3>
-    <p>[Insert your reflection about the project and suggested improvements to the prosthesis design]</p>
-</div>
-
-
-
-
-
-</div>
-
+        <h3>Reflection</h3>
+        <p>[Insert your reflection about the project and suggested improvements to the prosthesis design]</p>
+    </div>
 
     <!-- JavaScript to toggle between current and new photos -->
     <script>
         function showCurrentPhotos() {
             document.getElementById('current-photos').style.display = 'block';
             document.getElementById('new-photos').style.display = 'none';
+            document.getElementById('project3-photos').style.display = 'none';
+            document.getElementById('project4-photos').style.display = 'none';
         }
 
         function showNewPhotos() {
             document.getElementById('current-photos').style.display = 'none';
             document.getElementById('new-photos').style.display = 'block';
+            document.getElementById('project3-photos').style.display = 'none';
+            document.getElementById('project4-photos').style.display = 'none';
         }
-            function showProject3Photos() {
-        document.getElementById('current-photos').style.display = 'none';
-        document.getElementById('new-photos').style.display = 'none';
-        document.getElementById('project3-photos').style.display = 'block';
-    }
-            function showProject4Photos() {
+
+        function showProject3Photos() {
+            document.getElementById('current-photos').style.display = 'none';
+            document.getElementById('new-photos').style.display = 'none';
+            document.getElementById('project3-photos').style.display = 'block';
+            document.getElementById('project4-photos').style.display = 'none';
+        }
+
+        function showProject4Photos() {
             document.getElementById('current-photos').style.display = 'none';
             document.getElementById('new-photos').style.display = 'none';
             document.getElementById('project3-photos').style.display = 'none';
             document.getElementById('project4-photos').style.display = 'block';
         }
     </script>
-    
 
     <!-- Bootstrap core JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
@@ -173,3 +111,4 @@ ENGR 11A class keeps surprising me. The work is not easy but the end result is v
 </body>
 
 </html>
+
