--- a/index.html
+++ b/index.html
@@ -96,11 +96,15 @@
     </div>
 
     <div id="project4-photos" style="display:none;">
-        <h2>Project 4: 3D Printed e-NABLE Prosthesis</h2>
-        <p>Project 4 focuses on printing a 150% scale e-NABLE prosthetic hand. This project includes using the NIH 3D Print Exchange resources and collaborating with a new partner. We will also critique the design and suggest modifications.</p>
-        <img src="e-nable-hand1.jpg" alt="3D printed e-NABLE hand" width="300">
-        <img src="e-nable-hand2.jpg" alt="3D printed e-NABLE hand" width="300">
-        <p>The next steps include assembling the hand and reflecting on the design, noting areas for potential improvement.</p>
+        <h2>Project 4: 3D-Printed e-NABLE Prosthesis</h2>
+        <p>[Post-reflection text here]</p>
+        <img src="f1.jpg" alt="Assembly process step 1" width="300">
+        <img src="f2.jpg" alt="Assembly process step 2" width="300">
+        <img src="f3.jpg" alt="Assembly process step 3" width="300">
+        <h3>Design Modifications</h3>
+        <img src="f4.jpg" alt="Design modification 1" width="300">
+        <img src="f5.jpg" alt="Design modification 2" width="300">
+        <img src="f6.jpg" alt="Design modification 3" width="300">
     </div>
 
     <script>
