--- a/index.html
+++ b/index.html
@@ -93,6 +93,9 @@
         <h2>Alarm clock holder designing</h2>
         <p>In this step, we had to take measurements of all the parts of the alarm clock and battery case to get the specific details for a perfect design.</p>
         <img src="IMG_2121.jpg" alt="Alarm Clock Design" width="300">
+        <img src="IMG_2152.jpg" alt="Fusion 360 3D printed phone pen holder - top view" width="300">
+        <img src="IMG_2153.jpg" alt="Fusion 360 3D printed phone pen holder - top view" width="300">
+
     </div>
 
     <div id="project4-photos" style="display:none;">
