--- a/index.html
+++ b/index.html
@@ -90,11 +90,24 @@
         <img src="IMG_2123.jpg" alt="Fusion 360 3D printed phone pen holder - top view" width="300">
         <img src="IMG_2124.jpg" alt="Fusion 360 3D printed phone pen holder - top view" width="300">
 
-        <h2>Alarm clock holder designing</h2>
-        <p>In this step, we had to take measurements of all the parts of the alarm clock and battery case to get the specific details for a perfect design.</p>
-        <img src="IMG_2121.jpg" alt="Alarm Clock Design" width="300">
-        <img src="IMG_2152.jpg" alt="Fusion 360 3D printed phone pen holder - top view" width="300">
-        <img src="IMG_2153.jpg" alt="Fusion 360 3D printed phone pen holder - top view" width="300">
+
+                                <h2>Alarm clock holder Designing</h2>
+        <p>In This step we we had to take mesurments of all the mesures of the alarm clock and na=batterie case for getting the specific detailes for a perfect design. </p>
+
+    <img src="IMG_2144.jpg" alt="Fusion 360 3D printed phone pen holder - top view" width="300">
+    <img src="IMG_2145.jpg" alt="Fusion 360 3D printed phone pen holder - top view" width="300">
+    <img src="IMG_2146.jpg" alt="Fusion 360 3D printed phone pen holder - top view" width="300">
+                <h2>Laser cutting </h2>
+        <p>This faze was very hard we had to figure out how to build our sketch from zero and make it in a dxf format for the laser cutting. one of our biggest challanges was understanding simple principles of working with fusion like mirroing or parrallel figurs. With the help of our Proffesor and TA's we have succeded to create out first laser cutted Alarm Clock Holder!!! </p>
+    <img src="IMG_2140.jpg" alt="Fusion 360 3D printed phone pen holder - top view" width="300">
+    <img src="IMG_2141.jpg" alt="Fusion 360 3D printed phone pen holder - top view" width="300">
+    <img src="IMG_2143.jpg" alt="Fusion 360 3D printed phone pen holder - top view" width="300">
+                        <p> Unfortunately our first laser cut was not succesgull interms of size: It was just too small to fit. </p>
+
+                <h2>Laser cutting Final cut number 2 </h2>
+        <p>Laser cutting 2 - IN This step we decided to take a diffrent approach. Instead of recreating the whole sketch we decided to adjust by 103 % the size of the holder and it succefully worked. </p>
+    <img src="IMG_2152.jpg" alt="Fusion 360 3D printed phone pen holder - top view" width="300">
+    <img src="IMG_2153.jpg" alt="Fusion 360 3D printed phone pen holder - top view" width="300">
 
     </div>
 
