--- a/index.html
+++ b/index.html
@@ -114,13 +114,13 @@
     <div id="project4-photos" style="display:none;">
         <h2>Project 4: 3D-Printed e-NABLE Prosthesis</h2>
         <p>[Post-reflection text here]</p>
-        <img src="f1.Jpg" alt="Assembly process step 1" width="300">
-        <img src="f2.Jpg" alt="Assembly process step 2" width="300">
-        <img src="f3.Jpg" alt="Assembly process step 3" width="300">
+        <img src="f1.JPG" alt="Assembly process step 1" width="300">
+        <img src="f2.JPG" alt="Assembly process step 2" width="300">
+        <img src="f3.JPG" alt="Assembly process step 3" width="300">
         <h3>Design Modifications</h3>
-        <img src="f4.Jpg" alt="Design modification 1" width="300">
-        <img src="f5.Jpg" alt="Design modification 2" width="300">
-        <img src="f6.Jpg" alt="Design modification 3" width="300">
+        <img src="f4.JPG" alt="Design modification 1" width="300">
+        <img src="f5.JPG" alt="Design modification 2" width="300">
+        <img src="f6.JPG" alt="Design modification 3" width="300">
     </div>
 
     <script>
