--- a/index.html
+++ b/index.html
@@ -113,7 +113,10 @@
 
     <div id="project4-photos" style="display:none;">
         <h2>Project 4: 3D-Printed e-NABLE Prosthesis</h2>
+        <p>In this project I used Mini perusal plus 3D printer, PLA filament. Used Perusa slicer for editing and slicing the 3D print. I used the design of thee-ENABLE Phoenix Hand v3 prosthetic hand (taken from  e-NABLEhub-RecommendedDevices) at 150% scale. Also we used a hitting toll to heat the part of the wrist of the print so it will have a special curve that fits an arm. Moreover we connected all the parts together with a special kit we got that contained screws, cable, plastic finger covers and rubber bands.</p>
+        <p>During this process we faced as a team many challenges. Some of the challenges were logistic problems such as finding a printer to print since so many groups had a lot of prints to print. On the other hand we faced some difficulties with 150% scale which made the screws that are supposed to go inside the arm supporters too small for it to fit so they were completely loose. We did find a solution which is not perfect but it works: we set up the cable holders on the side and then fit them in so they are holding on to both sides of the print and do not slide out.</p>
         <p>[Post-reflection text here]</p>
+
         <img src="f1.JPG" alt="Assembly process step 1" width="300">
         <img src="f2.JPG" alt="Assembly process step 2" width="300">
         <img src="f3.JPG" alt="Assembly process step 3" width="300">
