--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
          <h3>Design Modifications</h3>
         <p>A modification I would like to add is adding a fingerprint (gel) on the primary finger so the user will have a finger that he uses to log into his phone, computer, ect.</p>
         <p>[Post-reflection text here]</p>
-        <img src="finger.JPG" alt="Design modification 3" width="300">
+        <img src="finger.png" alt="Design modification 3" width="300">
 
     </div>
 
