--- a/index.html
+++ b/index.html
@@ -125,13 +125,19 @@
         <img src="f6.JPG" alt="Design modification 3" width="300">
          <h3>Design Modifications</h3>
         <p>A modification I would like to add is adding a fingerprint (gel) on the primary finger so the user will have a finger that he uses to log into his phone, computer, ect.</p>
-        <p>[Post-reflection text here]</p>
         <img src="finger.png" alt="Design modification 3" width="300">
          <h3>Ethics and Design Reflection</h3>
 
         <p>One of my life aspirations other than becoming monumentally successful is to help people and make the world a better place. The fulfillment and the satisfactions of making a person feel when creating such a product that completely changes the way he lives his life and improves it for the better is my reason and drive for becoming successful. My personal connection to the topic of “Disability” is very meaningful as my mom was considered disabled for quite a while. This made me aspire to complete this project on the best side possible and I feel like I did so. </p>
         <p>In the book WHO IS THE BUILT WORLD BUILT FOR? (ALBERT CAMUS) they talk about Mike and his arms disability/
 “ Mike [...] on his right and wears a prosthetic arm as its match on the left: a forearm, wrist, and hand sheathed in a semi transparent hard plastic housing, pearly gray and smooth and contoured in the shape of a recognizable arm and hand, with each finger articulated as though in a full-length glove.” Mike’s story made me feel empathy and solidarity towards people with arm disabilities and body disabilities in general.</p>
+         <h3>Bibliography</h3>
+        <p> NIH3DPrintExchange: https://3d.nih.gov/collections/prosthetics</p>
+        <p> e-NABLEhub-RecommendedDevices: https://hub.e-nable.org/p/devices</p>
+        <p> Thekit weare using for parts: https://shop3duniverse.com/products/phoenix-hand-by-e-nable-assembly-materials-kit#v32622587858</p>
+        <p>Book: WHO IS THE BUILT WORLD BUILT FOR? (ALBERT CAMUS) </p>
+
+
 
     </div>
 
