--- a/index.html
+++ b/index.html
@@ -123,6 +123,11 @@
         <img src="f4.JPG" alt="Design modification 1" width="300">
         <img src="f5.JPG" alt="Design modification 2" width="300">
         <img src="f6.JPG" alt="Design modification 3" width="300">
+         <h3>Final Design</h3>
+        <p>For the final design we reprinted the distals print to 120% so now the screws fit perfectly and the prohestetic hand functions well!!! </p>
+        <img src="IMG_2255.jpg" alt="Fusion 360 3D printed phone pen holder - top view" width="300">
+        <img src="IMG_2256.jpg" alt="Fusion 360 3D printed phone pen holder - top view" width="300">
+
          <h3>Design Modifications</h3>
         <p>A modification I would like to add is adding a fingerprint (gel) on the primary finger so the user will have a finger that he uses to log into his phone, computer, ect.</p>
         <img src="finger.png" alt="Design modification 3" width="900">
