--- a/index.html
+++ b/index.html
@@ -40,6 +40,8 @@
     <button onclick="showNewPhotos()" style="background-color: green; color: white;">Project 2</button>
     <button onclick="showProject3Photos()" style="background-color: orange; color: white;">Project 3</button>
     <button onclick="showProject4Photos()" style="background-color: purple; color: white;">Project 4</button>
+    <button onclick="showScavengerhuntPhotos()" style="background-color: purple; color: white;">Scavenger hunt</button>
+
 
     <div id="current-photos" style="display:none;">
         <h2>Project Prusa Slicer software and the Prusa MINI+ printer</h2>
@@ -142,7 +144,13 @@
         <p> Thekit weare using for parts: https://shop3duniverse.com/products/phoenix-hand-by-e-nable-assembly-materials-kit#v32622587858</p>
         <p>Book: WHO IS THE BUILT WORLD BUILT FOR? (ALBERT CAMUS) </p>
 
+    <div id="Scavengerhunt-photos" style="display:none;">
+        <h2>P</h2>
+        <p> trve thacontained screws, cable, plastic finger covers and rubber bands.</p>
+        <div style="text-align: center;"> 
+        <img src="IMG_2124.jpg" alt="Assembly process step 1" width="300">
 
+         <h3>Final Design</h3>
 
     </div>
 
@@ -173,7 +181,14 @@
             document.getElementById("new-photos").style.display = "none";
             document.getElementById("project3-photos").style.display = "none";
             document.getElementById("project4-photos").style.display = "block";
+
         }
+
+                function showScavengerhuntPhotos() {
+            document.getElementById("current-photos").style.display = "none";
+            document.getElementById("new-photos").style.display = "none";
+            document.getElementById("project3-photos").style.display = "none";
+            document.getElementById("project4-photos").style.display = "block";
     </script>
 </body>
 
