--- a/index.html
+++ b/index.html
@@ -143,6 +143,7 @@
         <p> e-NABLEhub-RecommendedDevices: https://hub.e-nable.org/p/devices</p>
         <p> Thekit weare using for parts: https://shop3duniverse.com/products/phoenix-hand-by-e-nable-assembly-materials-kit#v32622587858</p>
         <p>Book: WHO IS THE BUILT WORLD BUILT FOR? (ALBERT CAMUS) </p>
+    </div>
 
     <div id="Scavengerhunt-photos" style="display:none;">
         <h2>P</h2>
