--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <button onclick="showNewPhotos()" style="background-color: green; color: white;">Project 2</button>
     <button onclick="showProject3Photos()" style="background-color: orange; color: white;">Project 3</button>
     <button onclick="showProject4Photos()" style="background-color: purple; color: white;">Project 4</button>
-    <button onclick="showScavengerhuntPhotos()" style="background-color: purple; color: white;">Scavenger hunt</button>
+    <button class="project-button purple" onclick="showScavengerhuntPhotos()">Scavenger hunt</button>
 
 
     <div id="current-photos" style="display:none;">
