--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <button onclick="showNewPhotos()" style="background-color: green; color: white;">Project 2</button>
     <button onclick="showProject3Photos()" style="background-color: orange; color: white;">Project 3</button>
     <button onclick="showProject4Photos()" style="background-color: purple; color: white;">Project 4</button>
-    <button class="project-button green" onclick="showScavengerhuntPhotos()">Scavenger hunt</button>
+    <button onclick="showScavengerhuntPhotos()" style="background-color: teal; color: white;">Scavenger Hunt</button>
 
 
     <div id="current-photos" style="display:none;">
@@ -145,13 +145,9 @@
         <p>Book: WHO IS THE BUILT WORLD BUILT FOR? (ALBERT CAMUS) </p>
     </div>
 
-    <div id="Scavengerhunt-photos" style="display:none;">
-        <h2>P</h2>
-        <p> trve thacontained screws, cable, plastic finger covers and rubber bands.</p>
-        <div style="text-align: center;"> 
-        <img src="IMG_2124.jpg" alt="Assembly process step 1" width="300">
-
-         <h3>Final Design</h3>
+    <div id="scavenger-hunt-photos" style="display:none;">
+        <h2>Scavenger Hunt</h2>
+        <p>Welcome to the scavenger hunt! Here are some items you need to find:</p>
 
     </div>
 
