--- a/index.html
+++ b/index.html
@@ -159,6 +159,8 @@
             document.getElementById("new-photos").style.display = "none";
             document.getElementById("project3-photos").style.display = "none";
             document.getElementById("project4-photos").style.display = "none";
+            document.getElementById("scavenger-hunt-photos").style.display = "none"; 
+
         }
 
         function showNewPhotos() {
@@ -166,6 +168,8 @@
             document.getElementById("new-photos").style.display = "block";
             document.getElementById("project3-photos").style.display = "none";
             document.getElementById("project4-photos").style.display = "none";
+            document.getElementById("scavenger-hunt-photos").style.display = "none"; 
+
         }
 
         function showProject3Photos() {
@@ -173,6 +177,8 @@
             document.getElementById("new-photos").style.display = "none";
             document.getElementById("project3-photos").style.display = "block";
             document.getElementById("project4-photos").style.display = "none";
+            document.getElementById("scavenger-hunt-photos").style.display = "none"; 
+
         }
 
         function showProject4Photos() {
@@ -180,6 +186,8 @@
             document.getElementById("new-photos").style.display = "none";
             document.getElementById("project3-photos").style.display = "none";
             document.getElementById("project4-photos").style.display = "block";
+            document.getElementById("scavenger-hunt-photos").style.display = "none"; 
+
 
         }
 
@@ -189,8 +197,7 @@
           document.getElementById("new-photos").style.display = "none";
           document.getElementById("project3-photos").style.display = "none";
           document.getElementById("project4-photos").style.display = "none";
-          document.getElementById("scavenger-hunt-photos").style.display = "block"; // This assumes you have a div with this ID
-}
+          document.getElementById("scavenger-hunt-photos").style.display = "block"; 
     </script>
 </body>
 
