--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <button onclick="showNewPhotos()" style="background-color: green; color: white;">Project 2</button>
     <button onclick="showProject3Photos()" style="background-color: orange; color: white;">Project 3</button>
     <button onclick="showProject4Photos()" style="background-color: purple; color: white;">Project 4</button>
-    <button onclick="scavengerhunt()" style="background-color: purple; color: white;">Scavenger Hunt</button>
+    <button onclick="scavengerhuntPhotos()" style="background-color: purple; color: white;">Scavenger Hunt</button>
 
 
     <div id="current-photos" style="display:none;">
@@ -145,7 +145,7 @@
         <p>Book: WHO IS THE BUILT WORLD BUILT FOR? (ALBERT CAMUS) </p>
     </div>
 
-    <div id="scavengerhunt-photos" style="display:none;">
+       <div id="scavengerhunt-photos" style="display:none;">
         <h2>Scavenger Hunt</h2>
         <p>Welcome to the scavenger hunt! Here are some items you need to find:</p>
         <img src="IMG_2238.jpg" alt="Scavenger Item 1" width="300">
