--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
        <div id="scavengerhunt-photos" style="display:none;">
         <h2>Scavenger Hunt</h2>
         <p>Welcome to the scavenger hunt! Here are some items you need to find:</p>
-        <img src="IMG_2238.JPG" alt="Scavenger Item 1" width="300">
+        <img src="IMG_2238.jpg" alt="Scavenger Item 1" width="300">
         <img src="scavenger_item2.JPG" alt="Scavenger Item 2" width="300">
         <img src="scavenger_item3.jpg" alt="Scavenger Item 3" width="300">
     </div>
