--- a/index.html
+++ b/index.html
@@ -152,6 +152,12 @@
         <img src="scavenger_item2.JPG" alt="Scavenger Item 2" width="300">
         <img src="scavenger_item3.jpg" alt="Scavenger Item 3" width="300">
     </div>
+        <div id="scavenger-photos" style="display:none;">
+    <!-- Your scavenger hunt content goes here -->
+    <h2>Scavenger Hunt</h2>
+    <p>Description or content of the scavenger hunt project.</p>
+</div>
+
 
     <script>
         function showCurrentPhotos() {
@@ -198,6 +204,11 @@
           document.getElementById("project4-photos").style.display = "none";
           document.getElementById("scavengerhunt-photos").style.display = "block"; 
         }
+        
+    function showscavengerhuntPhotos() {
+        document.getElementById("scavenger-photos").style.display = "block";
+    }
+
     </script>
 </body>
 
