--- a/index.html
+++ b/index.html
@@ -41,6 +41,8 @@
     <button onclick="showProject3Photos()" style="background-color: orange; color: white;">Project 3</button>
     <button onclick="showProject4Photos()" style="background-color: purple; color: white;">Project 4</button>
     <button onclick="showscavengerhuntPhotos()" style="background-color: purple; color: white;">Scavenger Hunt</button>
+    <button onclick="showscavengerPhotos()" style="background-color: purple; color: white;">Scavenger</button>
+
 
 
     <div id="current-photos" style="display:none;">
