--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
         function showscavengerhuntPhotos() {
           document.getElementById("current-photos").style.display = "none";
           document.getElementById("new-photos").style.display = "none";
-          document.getElementById("project3-photos").style.display = "none";
+          document.getElementById("project3-photos").style.display = "block";
           document.getElementById("project4-photos").style.display = "none";
           document.getElementById("scavengerhunt-photos").style.display = "block"; 
         }
