--- a/index.html
+++ b/index.html
@@ -27,6 +27,26 @@
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Add a shadow effect */
         }
     </style>
+        <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+    <meta name="description" content="" />
+    <title>Additional Photos - ENGR 11A Project</title>
+    <link href="css/styles.css" rel="stylesheet" />
+    <style>
+        .photo-gallery {
+            display: flex;
+            flex-wrap: wrap;
+            gap: 20px;
+            justify-content: center;
+            padding: 20px;
+        }
+        .photo-gallery img {
+            width: 300px;
+            height: auto;
+            border-radius: 10px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+        }
+    </style>
 </head>
 
 <body>
@@ -41,6 +61,8 @@
     <button onclick="showProject3Photos()" style="background-color: orange; color: white;">Project 3</button>
     <button onclick="showProject4Photos()" style="background-color: purple; color: white;">Project 4</button>
     <button onclick="showScavengerHuntPhotos()" style="background-color: purple; color: white;">Scavenger Hunt</button>
+    <button onclick="location.href='additional_photos.html'" style="background-color: brown; color: white;">More Photos</button>
+
 
 
 
@@ -154,7 +176,14 @@
         <img src="scavenger_item3.jpg" alt="Scavenger Item 3" width="300">
     </div>
 
-
+    <h1 class="main-title">More Project Photos</h1>
+    <div class="photo-gallery">
+        <img src="extra_photo1.jpg" alt="Extra Photo 1">
+        <img src="extra_photo2.jpg" alt="Extra Photo 2">
+        <img src="extra_photo3.jpg" alt="Extra Photo 3">
+        <!-- Add more images as needed -->
+    </div>
+    <button onclick="location.href='index.html'" style="background-color: blue; color: white;">Back to Main Page</button>
 
     <script>
         function showCurrentPhotos() {
