--- a/index.html
+++ b/index.html
@@ -26,8 +26,7 @@
             border-radius: 10px; /* Rounded corners */
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Add a shadow effect */
         }
-    <style>
-
+    </style>
 </head>
 
 <body>
@@ -42,8 +41,6 @@
     <button onclick="showProject3Photos()" style="background-color: orange; color: white;">Project 3</button>
     <button onclick="showProject4Photos()" style="background-color: purple; color: white;">Project 4</button>
     <button onclick="showScavengerHuntPhotos()" style="background-color: purple; color: white;">Scavenger Hunt</button>
-    <button onclick="location.href='additional_photos.html'" style="background-color: brown; color: white;">More Photos</button>
-
 
 
 
@@ -157,6 +154,8 @@
         <img src="scavenger_item3.jpg" alt="Scavenger Item 3" width="300">
     </div>
 
+
+
     <script>
         function showCurrentPhotos() {
             document.getElementById("current-photos").style.display = "block";
@@ -206,7 +205,3 @@
 
     </script>
 </body>
-
-</html>
-
-
