--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <button onclick="showNewPhotos()" style="background-color: green; color: white;">Project 2</button>
     <button onclick="showProject3Photos()" style="background-color: orange; color: white;">Project 3</button>
     <button onclick="showProject4Photos()" style="background-color: purple; color: white;">Project 4</button>
-    <button onclick="showScavengerHuntPhotos()" style="background-color: purple; color: white;">Scavenger Hunt</button>
+    <button onclick="showscavengerhuntPhotos()" style="background-color: purple; color: white;">Scavenger Hunt</button>
 
 
 
@@ -194,7 +194,7 @@
 
         }
 
-        function showScavengerHuntPhotos() {
+        function showscavengerhuntPhotos() {
           document.getElementById("current-photos").style.display = "none";
           document.getElementById("new-photos").style.display = "none";
           document.getElementById("project3-photos").style.display = "none";
