--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
     </div>
 
 
-    <div id="project5-photos" style="display:none;">
+    <div id="showProject5-photos" style="display:none;">
         <h2>Project 5: Alarm Clock Holder</h2>
    
     </div>
